--- a/module_main/src/main/res/layout/main_activity_splash.xml
+++ b/module_main/src/main/res/layout/main_activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/transparent"
-    tools:context=".ui.SplashActivity">
+    tools:context=".ui.activity.SplashActivity">
 
     <TextView
         android:layout_width="wrap_content"
