--- a/module_main/src/main/res/layout/main_activity_main.xml
+++ b/module_main/src/main/res/layout/main_activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".ui.activity.MainActivity">
 
     <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/vViewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
