feat(home): 添加首页文章接口及列表展示

--- a/lib_common/src/main/res/values/styles.xml
+++ b/lib_common/src/main/res/values/styles.xml
@@ -6,6 +6,9 @@
         <item name="colorPrimary">@color/common_theme</item>
         <item name="colorPrimaryDark">@color/common_theme</item>
         <item name="colorAccent">@color/common_theme</item>
+
+        <item name="android:windowBackground">@color/common_background</item>
+        <item name="android:navigationBarColor">@color/common_background</item>
     </style>
 
 </resources>
