--- a/module_home/src/main/res/layout/home_fragment_home.xml
+++ b/module_home/src/main/res/layout/home_fragment_home.xml
@@ -1,27 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/common_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.zhpan.bannerview.BannerViewPager
-            android:id="@+id/vBanner"
+        <soup.neumorphism.NeumorphCardView
+            android:id="@+id/vBannerContainer"
+            style="@style/Widget.Neumorph.CardView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="5dp"
             app:layout_constraintDimensionRatio="9:5"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.zhpan.bannerview.BannerViewPager
+                android:id="@+id/vBanner"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </soup.neumorphism.NeumorphCardView>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/vArticleRv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/vBanner" />
+            app:layout_constraintTop_toBottomOf="@id/vBannerContainer"
+            tools:listitem="@layout/home_item_article" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
